--- a/unbound/Dockerfile
+++ b/unbound/Dockerfile
@@ -88,7 +88,7 @@ EXPOSE 53/udp
 ############################################################
 ############################################################
 
-RUN [ "cross-build-end" ]
+#RUN [ "cross-build-end" ]
 
 ############################################################
 # Container Start
