--- a/unbound/Dockerfile
+++ b/unbound/Dockerfile
@@ -61,7 +61,7 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 ############################################################
 
 COPY config/unbound.conf /etc/unbound/unbound.conf
-RUN unbound-checkconf
+# RUN unbound-checkconf
 
 ############################################################
 # Copy Start Scripts
