Unbound RPI Bearbeitet

--- a/unbound-rpi/Dockerfile
+++ b/unbound-rpi/Dockerfile
@@ -1,6 +1,6 @@
 ############################################################
 # Dockerfile zum erstellen eines Dockercontainers für
-# unbound
+# unbound - RPI
 ############################################################
 
 ############################################################
@@ -19,7 +19,7 @@ MAINTAINER Sven Berger
 ############################################################
 
 #COPY bin/ /usr/bin/
-RUN [ "cross-build-start" ]
+# RUN [ "cross-build-start" ]
 
 ############################################################
 # don't ask for stupid things
@@ -88,7 +88,7 @@ EXPOSE 53/udp
 ############################################################
 ############################################################
 
-RUN [ "cross-build-end" ]
+# RUN [ "cross-build-end" ]
 
 ############################################################
 # Container Start
