--- a/unbound/rpi/Dockerfile
+++ b/unbound/rpi/Dockerfile
@@ -61,7 +61,8 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 ############################################################
 
 COPY config/unbound.conf /etc/unbound/unbound.conf
-# RUN unbound-checkconf
+RUN curl ftp://ftp.internic.net/domain/named.cache > /etc/unbound/root.hints \
+    && unbound-checkconf
 
 ############################################################
 # Copy Start Scripts
@@ -75,8 +76,7 @@ RUN chmod +x /run.sh
 ############################################################
 
 VOLUME ["/etc/unbound/unbound.conf.d/", \
-        "/etc/unbound/dnsovertls", \
-        "/var/log/homegear"]
+        "/etc/unbound/dnsovertls"]
 
 ############################################################
 # Ports needed
