--- a/unbound/amd64/Dockerfile
+++ b/unbound/amd64/Dockerfile
@@ -50,7 +50,8 @@ RUN apt update \
 
 RUN apt -y install \
     unbound \
-    dnscrypt-proxy
+    dnscrypt-proxy \
+    curl
 
 ############################################################
 # Remove Apt Data
