--- a/unbound/amd64/Dockerfile
+++ b/unbound/amd64/Dockerfile
@@ -64,8 +64,8 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 ############################################################
 
 COPY config/unbound.conf /etc/unbound/unbound.conf
-RUN curl ftp://ftp.internic.net/domain/named.cache > /etc/unbound/root.hints \
-    && unbound-checkconf
+RUN curl ftp://ftp.internic.net/domain/named.cache > /etc/unbound/root.hints
+#RUN unbound-checkconf
 
 ############################################################
 # Copy Start Scripts
