Unbound/PiHole bearbeitet

--- a/unbound/amd64/config/unbound.conf
+++ b/unbound/amd64/config/unbound.conf
@@ -8,4 +8,5 @@
 # The following line includes additional configuration files from the
 # /etc/unbound/unbound.conf.d directory.
 
-include: "/etc/unbound/unbound.conf.d/*.conf"
+include: "/etc/unbound/conf.d/*.conf"
+include: "/etc/unbound/local.d/*.conf"
