Unbound anchor/host hinzugefügt

--- a/unbound/amd64/Dockerfile
+++ b/unbound/amd64/Dockerfile
@@ -50,6 +50,8 @@ RUN apt update \
 
 RUN apt -y install \
     unbound \
+    unbound-anchor \
+    unbound-host \
     dnscrypt-proxy \
     curl
 
