Unbound AMD64: nagepasst wg. root.key

--- a/unbound/amd64/Dockerfile
+++ b/unbound/amd64/Dockerfile
@@ -78,7 +78,7 @@ COPY scripte/run.sh /run.sh
 COPY scripte/entrypoint.sh /entrypoint.sh
 RUN chmod +x /run.sh
 RUN chmod +x /entrypoint.sh
-
+RUN chown unbound:unbound -R /var/lib/unbound
 RUN /usr/sbin/unbound-anchor -v4 \
     -a /var/lib/unbound/root.key \
     -r /etc/unbound/root.hints
