--- a/unbound/amd64/Dockerfile
+++ b/unbound/amd64/Dockerfile
@@ -79,7 +79,7 @@ COPY scripte/entrypoint.sh /entrypoint.sh
 RUN chmod +x /run.sh
 RUN chmod +x /entrypoint.sh
 RUN find / -name root.key
-
+RUN cp /usr/share/dns/root.key /var/lib/unbound/
 RUN chown unbound:unbound -R /var/lib/unbound
 RUN chmod +w -R /var/lib/unbound
 RUN /usr/sbin/unbound-anchor -v4 \
